--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,13 @@ name = "xaml-test"
 version = "0.1.0"
 authors = ["Jacob Lund Mogensen <jacob.mogensen5@gmail.com>"]
 edition = "2018"
-build = "build.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[profile.release]
+lto = true
+codegen-units = 1
+opt-level = 3
 
 [dependencies]
 bindings = { path = "./bindings" }
